--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
     "google-translate-api-browser": "^1.1.71",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "reset-css": "^4.0.1"
+    "reset-css": "^4.0.1",
+    "toastify-js": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
