--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
     ],
     "routes": [
       { "src": "/static/(.*)", "headers": { "cache-control": "s-maxage=31536000,immutable" }, "dest": "/static/$1" },
-      { "src": "/favicon.ico", "dest": "/favicon.ico" },
+      { "src": "/favicon.png", "dest": "/favicon.ico" },
       { "src": "/asset-manifest.json", "dest": "/asset-manifest.json" },
       { "src": "/manifest.json", "dest": "/manifest.json" },
       { "src": "/precache-manifest.(.*)", "dest": "/precache-manifest.$1" },
