--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "add": "^2.0.6",
-    "google-translate-api-browser": "^1.1.71",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "request": "^2.88.0",
     "reset-css": "^4.0.1",
     "toastify-js": "^1.3.2"
   },
